--- a/css/estilos.css
+++ b/css/estilos.css
@@ -75,6 +75,7 @@ section img { /* Resto de imagenes, a mitad */
     height: auto;
     display: block;
     margin: auto;
+    padding-top: 20px ;
     align-items: center;
 }
 
@@ -88,6 +89,7 @@ h1 {
     justify-content: center;
     width: 100%;
     font-size: 70px;
+    margin: 20px;
     color: var(--color-GrisOscuro);
 }
 
@@ -110,7 +112,7 @@ main article section h3, main article section h4, #autor, #fecha, section a  {
     justify-content: left;
     width: 100%;
     color: var(--color-GrisOscuro);
-    margin: 30px 0px;
+    margin: 30px 0px 0px 0px;
 }
 
 main article section h3 {
@@ -141,7 +143,6 @@ section a {
     margin: 10px 0px 30px 0px;
     justify-content: center;
     color: orange;
-    margin: 0 auto;
     text-decoration: none;
 }
 
@@ -173,9 +174,21 @@ section p, main ul {
     font-family: var(--fuente-sans-serif);
 }
 
+.robot-list__items {
+    padding-left: 80px; 
+    list-style-type: square;
+}
+
+.robot-list__subitems {
+    padding-left: 60px;
+    list-style-type: disc;
+}
+
 main section ul {
     font-family: 'Arial', sans-serif;
     text-align: left;
+    padding-left: 60px; 
+    margin-bottom: 20px;
 }
 
 #milista {
@@ -210,6 +223,7 @@ main section ul {
     left: 0;
     width: 100%;
     height: 100%;
+    margin: 20px;
 }
 
 /*Leyendas de fotos y videos y textos en naranja sin span*/
@@ -261,6 +275,7 @@ p#autora {
     letter-spacing: 1.25px;
     background-color: gainsboro;
     text-align: center;
+    margin-top: 20px;
 }
 
 img#desiree {
